@@ -2,16 +2,18 @@ package io.quarkus.dev;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayDeque;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Deque;
+import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -20,6 +22,7 @@ import java.util.Set;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
+import java.util.regex.Pattern;
 
 import org.jboss.logging.Logger;
 
@@ -31,6 +34,7 @@ import org.jboss.logging.Logger;
 public class ClassLoaderCompiler {
 
     private static final Logger log = Logger.getLogger(ClassLoaderCompiler.class);
+    private static final Pattern WHITESPACE_PATTERN = Pattern.compile(" ");
 
     private final List<CompilationProvider> compilationProviders;
     /**
@@ -45,13 +49,25 @@ public class ClassLoaderCompiler {
             throws IOException {
         this.compilationProviders = compilationProviders;
 
-        List<URL> urls = new ArrayList<>();
+        Set<URL> urls = new HashSet<>();
         ClassLoader c = classLoader;
         while (c != null) {
             if (c instanceof URLClassLoader) {
                 urls.addAll(Arrays.asList(((URLClassLoader) c).getURLs()));
             }
             c = c.getParent();
+        }
+        //this is pretty yuck, but under JDK11 the URLClassLoader trick does not work
+        Enumeration<URL> manifests = classLoader.getResources("META-INF/MANIFEST.MF");
+        while (manifests.hasMoreElements()) {
+            URL url = manifests.nextElement();
+            if (url.getProtocol().equals("jar")) {
+                String path = url.getPath();
+                if (path.startsWith("file:")) {
+                    path = path.substring(5, path.lastIndexOf('!'));
+                    urls.add(new File(URLDecoder.decode(path, StandardCharsets.UTF_8.name())).toURI().toURL());
+                }
+            }
         }
 
         urls.addAll(context.getClassPath());
@@ -67,6 +83,9 @@ public class ClassLoaderCompiler {
                 classPathElements.add(new File(i.getClassesPath()));
             }
         }
+        final String devModeRunnerJarCanonicalPath = context.getDevModeRunnerJarFile() == null
+                ? null
+                : context.getDevModeRunnerJarFile().getCanonicalPath();
         while (!toParse.isEmpty()) {
             String s = toParse.poll();
             if (!parsedFiles.contains(s)) {
@@ -78,7 +97,23 @@ public class ClassLoaderCompiler {
                 if (file.isDirectory()) {
                     classPathElements.add(file);
                 } else if (file.getName().endsWith(".jar")) {
-                    classPathElements.add(file);
+                    // skip adding the dev mode runner jar to the classpath to prevent
+                    // hitting a bug in JDK - https://bugs.openjdk.java.net/browse/JDK-8232170
+                    // which causes the programmatic java file compilation to fail.
+                    // see details in https://github.com/quarkusio/quarkus/issues/3592.
+                    // we anyway don't need to add that jar to the hot deployment classpath since the
+                    // current running JVM is already launched using that jar, plus it doesn't
+                    // have any application resources/classes. The Class-Path jar(s) contained
+                    // in the MANIFEST.MF of that dev mode runner jar are anyway added explicitly
+                    // in various different ways in this very own ClassLoaderCompiler class, so
+                    // not passing this jar to the JDK's compiler won't prevent its Class-Path
+                    // references from being part of the hot deployment compile classpath.
+                    if (devModeRunnerJarCanonicalPath != null
+                            && file.getCanonicalPath().equals(devModeRunnerJarCanonicalPath)) {
+                        log.debug("Dev mode runner jar " + file + " won't be added to compilation classpath of hot deployment");
+                    } else {
+                        classPathElements.add(file);
+                    }
                     if (!file.isDirectory() && file.getName().endsWith(".jar")) {
                         try (JarFile jar = new JarFile(file)) {
                             Manifest mf = jar.getManifest();
@@ -87,13 +122,19 @@ public class ClassLoaderCompiler {
                             }
                             Object classPath = mf.getMainAttributes().get(Attributes.Name.CLASS_PATH);
                             if (classPath != null) {
-                                for (String i : classPath.toString().split(" ")) {
+                                for (String classPathEntry : WHITESPACE_PATTERN.split(classPath.toString())) {
+                                    final URI cpEntryURI = new URI(classPathEntry);
                                     File f;
-                                    try {
-                                        URL u = new URL(i);
-                                        f = new File(u.getPath());
-                                    } catch (MalformedURLException e) {
-                                        f = new File(file.getParentFile(), i);
+                                    // if it's a "file" scheme URI, then use the path as a file system path
+                                    // without the need to resolve it
+                                    if (cpEntryURI.isAbsolute() && cpEntryURI.getScheme().equals("file")) {
+                                        f = new File(cpEntryURI.getPath());
+                                    } else {
+                                        try {
+                                            f = Paths.get(new URI("file", null, "/", null).resolve(cpEntryURI)).toFile();
+                                        } catch (URISyntaxException e) {
+                                            f = new File(file.getParentFile(), classPathEntry);
+                                        }
                                     }
                                     if (f.exists()) {
                                         toParse.add(f.getAbsolutePath());
@@ -121,7 +162,13 @@ public class ClassLoaderCompiler {
                                     classPathElements,
                                     new File(i.getProjectDirectory()),
                                     new File(sourcePath),
-                                    new File(i.getClassesPath())));
+                                    new File(i.getClassesPath()),
+                                    context.getSourceEncoding(),
+                                    context.getCompilerOptions(),
+                                    context.getSourceJavaVersion(),
+                                    context.getTargetJvmVersion(),
+                                    context.getCompilerPluginArtifacts(),
+                                    context.getCompilerPluginsOptions()));
                 });
             }
         }
