@@ -1,17 +1,24 @@
 package io.quarkus.runtime.configuration;
 
+import java.lang.reflect.Array;
 import java.lang.reflect.Field;
+import java.lang.reflect.GenericArrayType;
 import java.lang.reflect.ParameterizedType;
+import java.lang.reflect.Type;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Optional;
-import java.util.OptionalDouble;
-import java.util.OptionalInt;
-import java.util.OptionalLong;
+import java.util.Set;
 
 import org.eclipse.microprofile.config.ConfigProvider;
+import org.eclipse.microprofile.config.spi.Converter;
 
+import io.quarkus.runtime.annotations.ConfigGroup;
 import io.quarkus.runtime.annotations.ConfigItem;
+import io.smallrye.config.Converters;
 import io.smallrye.config.SmallRyeConfig;
 
 /**
@@ -24,64 +31,55 @@ import io.smallrye.config.SmallRyeConfig;
  */
 public class ConfigInstantiator {
 
+    // certain well-known classname suffixes that we support
+    private static Set<String> supportedClassNameSuffix;
+
+    static {
+        final Set<String> suffixes = new HashSet<>();
+        suffixes.add("Config");
+        suffixes.add("Configuration");
+        supportedClassNameSuffix = Collections.unmodifiableSet(suffixes);
+    }
+
     public static void handleObject(Object o) {
-        SmallRyeConfig config = (SmallRyeConfig) ConfigProvider.getConfig();
-        Class cls = o.getClass();
-        String name = dashify(cls.getSimpleName().substring(0, cls.getSimpleName().length() - "Config".length()));
+        final SmallRyeConfig config = (SmallRyeConfig) ConfigProvider.getConfig();
+        final Class cls = o.getClass();
+        final String clsNameSuffix = getClassNameSuffix(o);
+        if (clsNameSuffix == null) {
+            // unsupported object type
+            return;
+        }
+        final String name = dashify(cls.getSimpleName().substring(0, cls.getSimpleName().length() - clsNameSuffix.length()));
         handleObject("quarkus." + name, o, config);
     }
 
     private static void handleObject(String prefix, Object o, SmallRyeConfig config) {
 
         try {
-            Class cls = o.getClass();
-            if (!cls.getName().endsWith("Config")) {
+            final Class cls = o.getClass();
+            if (!isClassNameSuffixSupported(o)) {
                 return;
             }
-            for (Field field : cls.getFields()) {
+            for (Field field : cls.getDeclaredFields()) {
                 ConfigItem configItem = field.getDeclaredAnnotation(ConfigItem.class);
-                if (configItem == null) {
-                    Object newInstance = field.getType().newInstance();
+                final Class<?> fieldClass = field.getType();
+                if (configItem == null || fieldClass.isAnnotationPresent(ConfigGroup.class)) {
+                    Object newInstance = fieldClass.getConstructor().newInstance();
                     field.set(o, newInstance);
                     handleObject(prefix + "." + dashify(field.getName()), newInstance, config);
                 } else {
                     String name = configItem.name();
                     if (name.equals(ConfigItem.HYPHENATED_ELEMENT_NAME)) {
                         name = dashify(field.getName());
+                    } else if (name.equals(ConfigItem.ELEMENT_NAME)) {
+                        name = field.getName();
                     }
                     String fullName = prefix + "." + name;
-                    String defaultValue = configItem.defaultValue();
-                    if (defaultValue.equals(ConfigItem.NO_DEFAULT)) {
-                        defaultValue = null;
-                    }
-                    Optional<?> val = config.getOptionalValue(fullName, field.getType());
-                    if (val.isPresent()) {
-                        field.set(o, val.get());
-                    } else if (defaultValue != null) {
-                        if (field.getType().equals(List.class)) {
-                            Class<?> listType = (Class<?>) ((ParameterizedType) field.getGenericType())
-                                    .getActualTypeArguments()[0];
-                            String[] parts = defaultValue.split(",");
-                            List<Object> list = new ArrayList<>();
-                            for (String i : parts) {
-                                list.add(config.convert(i, listType));
-                            }
-                            field.set(o, list);
-                        } else if (field.getType().equals(Optional.class)) {
-                            Class<?> optionalType = (Class<?>) ((ParameterizedType) field.getGenericType())
-                                    .getActualTypeArguments()[0];
-                            field.set(o, Optional.of(config.convert(defaultValue, optionalType)));
-                        } else {
-                            field.set(o, config.convert(defaultValue, field.getType()));
-                        }
-                    } else if (field.getType().equals(Optional.class)) {
-                        field.set(o, Optional.empty());
-                    } else if (field.getType().equals(OptionalInt.class)) {
-                        field.set(o, OptionalInt.empty());
-                    } else if (field.getType().equals(OptionalDouble.class)) {
-                        field.set(o, OptionalDouble.empty());
-                    } else if (field.getType().equals(OptionalLong.class)) {
-                        field.set(o, OptionalLong.empty());
+                    final Type genericType = field.getGenericType();
+                    final Converter<?> conv = getConverterFor(genericType);
+                    try {
+                        field.set(o, config.getValue(fullName, conv));
+                    } catch (NoSuchElementException ignored) {
                     }
                 }
             }
@@ -90,14 +88,82 @@ public class ConfigInstantiator {
         }
     }
 
+    private static Converter<?> getConverterFor(Type type) {
+        // hopefully this is enough
+        final SmallRyeConfig config = (SmallRyeConfig) ConfigProvider.getConfig();
+        Class<?> rawType = rawTypeOf(type);
+        if (rawType == Optional.class) {
+            return Converters.newOptionalConverter(getConverterFor(typeOfParameter(type, 0)));
+        } else if (rawType == List.class) {
+            return Converters.newCollectionConverter(getConverterFor(typeOfParameter(type, 0)), ArrayList::new);
+        } else {
+            return config.getConverter(rawTypeOf(type));
+        }
+    }
+
+    // cribbed from io.quarkus.deployment.util.ReflectUtil
+    private static Class<?> rawTypeOf(final Type type) {
+        if (type instanceof Class<?>) {
+            return (Class<?>) type;
+        } else if (type instanceof ParameterizedType) {
+            return rawTypeOf(((ParameterizedType) type).getRawType());
+        } else if (type instanceof GenericArrayType) {
+            return Array.newInstance(rawTypeOf(((GenericArrayType) type).getGenericComponentType()), 0).getClass();
+        } else {
+            throw new IllegalArgumentException("Type has no raw type class: " + type);
+        }
+    }
+
+    static Type typeOfParameter(final Type type, final int paramIdx) {
+        if (type instanceof ParameterizedType) {
+            return ((ParameterizedType) type).getActualTypeArguments()[paramIdx];
+        } else {
+            throw new IllegalArgumentException("Type is not parameterized: " + type);
+        }
+    }
+
+    //    Configuration keys are normally derived from the field names that they are tied to.
+    //    This is done by de-camel-casing the name and then joining the segments with hyphens (-).
+    //    Some examples:
+    //    bindAddress becomes bind-address
+    //    keepAliveTime becomes keep-alive-time
+    //    requestDNSTimeout becomes request-dns-timeout
     private static String dashify(String substring) {
-        StringBuilder ret = new StringBuilder();
-        for (char i : substring.toCharArray()) {
-            if (i >= 'A' && i <= 'Z') {
+        final StringBuilder ret = new StringBuilder();
+        final char[] chars = substring.toCharArray();
+        for (int i = 0; i < chars.length; i++) {
+            final char c = chars[i];
+            if (i != 0 && i != (chars.length - 1) && c >= 'A' && c <= 'Z') {
                 ret.append('-');
             }
-            ret.append(Character.toLowerCase(i));
+            ret.append(Character.toLowerCase(c));
         }
         return ret.toString();
+    }
+
+    private static String getClassNameSuffix(final Object o) {
+        if (o == null) {
+            return null;
+        }
+        final String klassName = o.getClass().getName();
+        for (final String supportedSuffix : supportedClassNameSuffix) {
+            if (klassName.endsWith(supportedSuffix)) {
+                return supportedSuffix;
+            }
+        }
+        return null;
+    }
+
+    private static boolean isClassNameSuffixSupported(final Object o) {
+        if (o == null) {
+            return false;
+        }
+        final String klassName = o.getClass().getName();
+        for (final String supportedSuffix : supportedClassNameSuffix) {
+            if (klassName.endsWith(supportedSuffix)) {
+                return true;
+            }
+        }
+        return false;
     }
 }
